--- a/src/SerilogCustomExtensions/SerilogCustomExtensions.csproj
+++ b/src/SerilogCustomExtensions/SerilogCustomExtensions.csproj
@@ -9,10 +9,10 @@
 
     <PropertyGroup>
         <TargetFrameworks>net6.0</TargetFrameworks>
-        <Description>serilog library logs extensions</Description>
+        <Description>serilog custom extension logs library</Description>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <RepositoryType>git</RepositoryType>
-        <RepositoryUrl>https://github.com/AngeloDotNet/SerilogExtensions</RepositoryUrl>
+        <RepositoryUrl>https://github.com/AngeloDotNet/SerilogCustomExtensions</RepositoryUrl>
         <RepositoryBranch>main</RepositoryBranch>
         <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
