--- a/src/SerilogCustomExtensions/SerilogCustomExtensions.csproj
+++ b/src/SerilogCustomExtensions/SerilogCustomExtensions.csproj
@@ -9,10 +9,14 @@
 
     <PropertyGroup>
         <TargetFrameworks>net6.0</TargetFrameworks>
+        <Authors>Angelo Pirola</Authors>
+        <Product>.NET library serilog custom extension</Product>
         <Description>serilog custom extension logs library</Description>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageProjectUrl>https://github.com/AngeloDotNet/SerilogCustomExtensions</PackageProjectUrl>
+        <PackageTags>csharp net6 serilog custom extensions library</PackageTags>
         <RepositoryType>git</RepositoryType>
-        <RepositoryUrl>https://github.com/AngeloDotNet/SerilogCustomExtensions</RepositoryUrl>
+        <RepositoryUrl>https://github.com/AngeloDotNet/SerilogCustomExtensions.git</RepositoryUrl>
         <RepositoryBranch>main</RepositoryBranch>
         <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
